--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "angular-mydatepicker-example",
-  "version": "0.8.1",
-  "description": "Angular datepicker and date range picker",
-  "homepage": "https://kekeh.github.io/angular-mydatepicker/",
+  "name": "angular-mydatepicker-extra-example",
+  "version": "0.8.2",
+  "description": "Angular datepicker and date range picker based on https://kekeh.github.io/angular-mydatepicker/ - extended with some features.",
+  "homepage": "https://github.com/grafzahl-io/angular-mydatepicker",
   "keywords": [
     "Angular",
     "datepicker",
     "date range picker"
   ],
-  "author": "kekeh",
+  "author": "grafzahl-io",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kekeh/angular-mydatepicker.git"
+    "url": "https://github.com/grafzahl-io/angular-mydatepicker"
   },
   "scripts": {
     "ng": "ng",
@@ -24,7 +24,7 @@
     "lint-lib": "ng lint AngularMyDatePicker",
     "e2e": "ng e2e"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
