--- a/projects/angular-mydatepicker/package.json
+++ b/projects/angular-mydatepicker/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "angular-mydatepicker",
-  "version": "0.8.1",
-  "description": "Angular datepicker and date range picker",
-  "homepage": "https://kekeh.github.io/angular-mydatepicker/",
+  "name": "angular-mydatepicker-extra",
+  "version": "0.8.2",
+  "description": "Angular datepicker and date range picker based on https://kekeh.github.io/angular-mydatepicker/ - extended with some features.",
+  "homepage": "https://github.com/grafzahl-io/angular-mydatepicker",
   "keywords": [
     "Angular",
     "datepicker",
     "date range picker"
   ],
-  "author": "kekeh",
+  "author": "grafzahl-io",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kekeh/angular-mydatepicker.git"
+    "url": "https://github.com/kekeh/angular-mydatepicker-extended.git"
   },
   "peerDependencies": {
     "@angular/common": "^9.0.0",
